                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 23-10-2004 updated: German language file
  - 23-10-2004 changed: Greek language file (Thnx to modon)
  - 23-10-2004 changed: Slovenian language file (Thnx to hijacker)
  - 23-10-2004 changed: Dutch language file (Thnx to joepmeloenx)
  - 23-10-2004 changed: Maltese language file (Author unknown)
  - 23-10-2004 changed: Using less memory for video playback now
  - 22-10-2004 changed: libcdio updated to 0.70 (Thnx to Mog) 
  - 20-10-2004 added: ssl support to python
  - 20-10-2004 added: python dll loading, this means python can now make use of extension .pyd 
                      (make sure you update your python/lib directory)
  - 20-10-2004 fixed: some fixes and additions to the socket emulation in the dll loader
  - 20-10-2004 fixed: Flashing green bar in video
  - 20-10-2004 added: USB Keyboard support (see keymap.xml for mapping)
  - 20-10-2004 added: New Filemanager
  - 20-10-2004 added: New setting to disable the display of tracknumbers in My Music
  - 20-10-2004 added: New setting to remove Parent Dir items from lists + thumbpanels
  - 20-10-2004 added: List Controls now display the thumbs instead of just icons
  - 19-10-2004 fixed: mplayer leaks memory (next partial fix) audio render wasn't being freed
  - 19-10-2004 fixed: memleaks in RSS feed reader
  - 19-10-2004 fixed: possible memleak in filezilla
  - 19-10-2004 fixed: [ 1049621 ] hdd spindown broken
  - 17-10-2004 fixed: python controls like labels and buttons are now verticaly aligned by default
  - 17-10-2004 fixed: Thumbnail panel spin control related crash + page no. issues
  - 17-10-2004 fixed: mplayer leaks memory (partial fix)