@@ -61,7 +61,20 @@ void CGUIDialogSubMenu::OnClickDashboard(CGUIMessage& aMessage)
 
 void CGUIDialogSubMenu::OnClickReboot(CGUIMessage& aMessage)
 {
-  g_applicationMessenger.Restart();
+	CGUIDialogYesNo* dlgYesNo = (CGUIDialogYesNo*)m_gWindowManager.GetWindow(WINDOW_DIALOG_YES_NO);
+	if (dlgYesNo)
+	{
+		dlgYesNo->SetHeading(13307);
+		dlgYesNo->SetLine(0, 13308);
+		dlgYesNo->SetLine(1, 13309);
+		dlgYesNo->SetLine(2, "");
+		dlgYesNo->DoModal(GetID());
+
+    if(dlgYesNo->IsConfirmed())
+      g_applicationMessenger.Restart();
+    else
+      g_applicationMessenger.Reset();
+  }
 }
 
 void CGUIDialogSubMenu::OnClickCredits(CGUIMessage& aMessage)
