@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 24-10-2004 added: dialog to allow user to do a reboot instead of reset
   - 23-10-2004 updated: German language file
   - 23-10-2004 changed: Greek language file (Thnx to modon)
   - 23-10-2004 changed: Slovenian language file (Thnx to hijacker)
